# fliper

./: .gitignore  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/wordlists/: common.txt
app/src/main/cpp/: CMakeLists.txt  native_wifi.c
app/src/main/java/com/flipperdroid/: MainActivity.kt
app/src/main/java/com/flipperdroid/modules/ble/: BLESpammer.kt
app/src/main/java/com/flipperdroid/modules/ir/: IRManager.kt  TVBgone.kt
app/src/main/java/com/flipperdroid/modules/root/: RootShell.kt
app/src/main/java/com/flipperdroid/modules/wifi/: NativeWiFi.kt  PasswordCracker.kt  WiFiScanner.kt
app/src/main/java/com/flipperdroid/ui/screens/: AboutScreen.kt  BLEScreen.kt  IRScreen.kt  MainMenuScreen.kt  WiFiScreen.kt
app/src/main/java/com/flipperdroid/ui/theme/: Theme.kt
app/src/main/java/com/flipperdroid/util/: PermissionManager.kt
app/src/main/res/mipmap-hdpi/: ic_launcher.xml
app/src/main/res/values/: colors.xml  themes.xml
